# CT-HYB-SEGMENT

./: .gitignore  CMakeLists.txt  README.md  blasheader.h  fourpoint.C  green_function.h  hyb.hpp  hybblasmatrix.hpp  hybconfig.cpp  hybconfig.hpp  hybevaluate.cpp  hybevaluate.hpp  hybfun.cpp  hybfun.hpp  hybint.cpp  hybint.hpp  hyblocal.cpp  hyblocal.hpp  hybmain.cpp  hybmatrix.cpp  hybmatrix.hpp  hybmatrix_ft.cpp  hybmatrix_nfft.cpp  hybmeasurements.cpp  hybretintfun.cpp  hybretintfun.hpp  hybsegment.hpp  hybsim.cpp  hybupdates.cpp  impurity.C  impurity.h  moves.h  types.h  update.h
Documentation/: Makefile  hybdoc.tex  refs.bib
cmake/: FindFFTW3.cmake  FindNFFT.cmake
misc/: alps_cthyb.lmod.in  example_run.sh  gen_sample_hybridization.py
